version/stable/_sources/api/ansys/mechanical/stubs/v242/Ansys/ACT/Automation/Mechanical/ArchiveSettings.rst.txt
.. vale off



:class:`ArchiveSettings`
========================

.. py:class:: ansys.mechanical.stubs.v242.Ansys.ACT.Automation.Mechanical.ArchiveSettings(includeResultAndSolutionFiles: bool, includeUserFiles: bool)

   Bases: :py:obj:`object`


   
   A settings class for the project Archive operation
















   ..
       !! processed by numpydoc !!


.. py:currentmodule:: ArchiveSettings

Overview
--------

.. tab-set::




   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~IncludeResultAndSolutionFiles`
            - A boolean which configures the option to include result/solution files in the archive file
          * - :py:attr:`~IncludeUserFiles`
            - A boolean which configures the option to include files inside the UserFiles folder in the archive file







Property detail
---------------
.. py:property:: IncludeResultAndSolutionFiles
   :type: Optional[bool]


   
   A boolean which configures the option to include result/solution files in the archive file
















   ..
       !! processed by numpydoc !!

.. py:property:: IncludeUserFiles
   :type: Optional[bool]


   
   A boolean which configures the option to include files inside the UserFiles folder in the archive file
















   ..
       !! processed by numpydoc !!







.. vale on