version/stable/_sources/api/ansys/mechanical/stubs/v252/Ansys/ACT/Automation/Mechanical/ArchiveSettings.rst.txt
.. vale off



:class:`ArchiveSettings`
========================

.. py:class:: ansys.mechanical.stubs.v252.Ansys.ACT.Automation.Mechanical.ArchiveSettings(includeResultAndSolutionFiles: bool, includeUserFiles: bool)

   Bases: :py:obj:`object`


   
   A settings class for the project Archive operation
















   ..
       !! processed by numpydoc !!


.. py:currentmodule:: ArchiveSettings

Overview
--------

.. tab-set::



   .. tab-item:: Methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~Equals`
            - Equals method.
          * - :py:attr:`~GetHashCode`
            - GetHashCode method.
          * - :py:attr:`~GetType`
            - GetType method.
          * - :py:attr:`~ToString`
            - ToString method.


   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~IncludeResultAndSolutionFiles`
            - A boolean which configures the option to include result/solution files in the archive file
          * - :py:attr:`~IncludeUserFiles`
            - A boolean which configures the option to include files inside the UserFiles folder in the archive file







Property detail
---------------
.. py:property:: IncludeResultAndSolutionFiles
   :type: Optional[bool]


   
   A boolean which configures the option to include result/solution files in the archive file
















   ..
       !! processed by numpydoc !!

.. py:property:: IncludeUserFiles
   :type: Optional[bool]


   
   A boolean which configures the option to include files inside the UserFiles folder in the archive file
















   ..
       !! processed by numpydoc !!





Method detail
-------------
.. py:method:: Equals(obj: Any) -> bool

   
   Equals method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetHashCode() -> int

   
   GetHashCode method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetType() -> type

   
   GetType method.

   ..
       !! processed by numpydoc !!

.. py:method:: ToString() -> str

   
   ToString method.

   ..
       !! processed by numpydoc !!



.. vale on